--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Text Modifiers is a utility which can be used to manupulate your text in the way you want. "
+      content="Text Modifiers is a utility which can be used to manupulate your text in the way you want. You can remove extra spaces, copy the manipulated text as well as convert you text from UpperCase to lowercase of Lowercase to uppercase.You also listen your text. "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
